--- a/frontend/src/components/UserDetail/userDetail.module.css
+++ b/frontend/src/components/UserDetail/userDetail.module.css
@@ -50,7 +50,7 @@
   display: inline-block;
   top: 2%;
   right: 0;
-  width: 38.75rem;
+  width: 3.75rem;
 }
 
 .contactInfoContainaer {
